<?xml version="1.0" encoding="utf-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.sttk</groupId>
  <artifactId>sabi_redis</artifactId>
  <version>0.1.0</version>
  <packaging>jar</packaging>

  <name>sabi_redis</name>
  <description>The sabi data access library for Redis in Java</description>
  <url>https://github.com/sttk/sabi_redis-java</url>

  <licenses>
    <license>
      <name>The MIT License</name>
      <url>https://opensource.org/license/mit/</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>sttk</id>
      <name>Takayuki Sato</name>
      <url>https://github.com/sttk</url>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/sttk/sabi_redis-java</url>
    <connection>scm:git:git://github.com/sttk/sabi_redis-java.git</connection>
    <developerConnection>scm:git:git://github.com/sttk/sabi_redis-java.git</developerConnection>
  </scm>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!--
     For changing environment variables in unit tests.
     This setting is for maven-surefire-plugin but moved here for jacoco.
     See: https://www.eclemma.org/jacoco/trunk/doc/prepare-agent-mojo.html
    -->
    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.github.sttk</groupId>
      <artifactId>errs</artifactId>
      <version>0.2.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.github.sttk</groupId>
      <artifactId>sabi</artifactId>
      <version>0.8.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.lettuce</groupId>
      <artifactId>lettuce-core</artifactId>
      <version>7.5.1.RELEASE</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>6.1.0-M1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>6.1.0-M1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>4.0.0-M1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
          <author>true</author>
          <source>25</source>
          <show>protected</show>
          <encoding>UTF-8</encoding>
          <charset>UTF-8</charset>
          <docencoding>UTF-8</docencoding>
          <bottom><![CDATA[Copyright 2026 Takayuki Sato. All Rights Reserved.]]></bottom>
          <outputDirectory>${project.reporting.outputDirectory}</outputDirectory>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>aggregate</goal>
            </goals>
            <phase>site</phase>
          </execution>
          <execution>
            <id>attach-javadoc</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.14</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <compilerArgs>
            <arg>-g</arg>
            <arg>-Xlint</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.5</version>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <java>
            <googleJavaFormat/>
          </java>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>nativ-build-option-jdk21</id>
      <activation>
        <jdk>21</jdk>
      </activation>
      <properties>
        <buildArg>-J--add-opens=java.base/java.lang=ALL-UNNAMED --initialize-at-build-time=org.junit.jupiter.engine.discovery.MethodSegmentResolver</buildArg>
      </properties>
    </profile>
    <profile>
      <id>nativ-build-option-jdk23-to-24</id>
      <activation>
        <jdk>[23,25)</jdk>
      </activation>
      <properties>
        <buildArg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</buildArg>
      </properties>
    </profile>
    <profile>
      <id>nativ-build-option-jdk25</id>
      <activation>
        <jdk>25</jdk>
      </activation>
      <properties>
        <buildArg>-J--add-opens=java.base/java.lang=ALL-UNNAMED -H:+SharedArenaSupport</buildArg>
      </properties>
    </profile>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>1.0.0</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>native test</id>
                <goals>
                  <goal>test</goal>
                </goals>
                <phase>test</phase>
              </execution>
            </executions>
            <configuration>
              <fallback>false</fallback>
              <buildArgs>
                <buildArg>${buildArg}</buildArg>
              </buildArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>trace</id>
      <properties>
        <argLine>-agentlib:native-image-agent=config-output-dir=target/native-trace</argLine>
      </properties>
    </profile>
    <profile>
      <id>release-central</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.10.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>true</autoPublish>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
